# A-Star-for-Rigid-Robot

A-Star-for-Rigid-Robot/Project 3 Phase 2/: Project3_Phase2_v1.py  Project3_Phase2_v2.py  Project3_phase2_v3.py
Project 3 Phase 2/: Astar_rigid.py  Project3_Phase2_v1.py  Project3_Phase2_v2.py  Project3_phase2_v3.py  ReadMe.txt
Project 3 Phase 3/: Astar_rigid.py  How to plot curves.py  Phase3.py  ReadMe.txt
Project 3 Phase 4/: A star.ipynb  Astar_rigid_v2.py  README.md
Project 3 Phase 4/ros_ws/astar/: CMakeLists.txt  README.md  package.xml
Project 3 Phase 4/ros_ws/astar/scripts/: astar.py  turtlebot_astar.py
Project 3 Phase 4/turtlebot_ros_package/: README.md  package.xml
Project 3 Phase 4/turtlebot_ros_package/launch/: demo.launch
Project 3 Phase 4/turtlebot_ros_package/scripts/: 1turtlebot_astar1.py  astar.py  turtlebot_astar.py
